Bug: vf-card item alignment (#1425)
* Bug: vf-card item alignment

Closes #1395

* Use aspect ratio

--- a/components/vf-card/vf-card.scss
+++ b/components/vf-card/vf-card.scss
@@ -15,7 +15,7 @@
   --card-text-color: var(--vf-card-theme-color--foreground, #{ui-color(black)});
   --card-background-color: var(--vf-card-theme-color--background , #{ui-color(white)});
 
-  align-items: start;
+  align-content: start;
   background-color: var(--card-background-color);
   /* border: 1px solid var(--vf-card-theme-color--border, var(--card-border-color, #{set-color(vf-grey--lightest)})); */
   box-shadow: 0 .125rem .25rem rgba(color(grey--dark), .5);
@@ -297,13 +297,11 @@
   }
 }
 
-
-
 // --------------------------------------------------------------------------------
 // TODO: To be deleted and removed in v3.0.0
 // --------------------------------------------------------------------------------
 
-// note: some of this CSS 'overides' CSS in the newer cards -- but only by replacing
+// note: some of this CSS 'overrides' CSS in the newer cards -- but only by replacing
 // like for like.
 
 // vf-card levels of design
